# data-science-spring-26

./: .gitignore  .problem_output.xml  .temp_output.txt  README.md  cleaned_population_2015-2024.csv  database.db  ingestion-pipeline.py  main.py  plz_bundesland.csv  postalcodemapping  pyproject.toml
docs/: beds_density_animation.html  index.html  style.css
docs/charts_supply_demand_gap/: Baden-Württemberg.html  Bayern.html  Berlin.html  Brandenburg.html  Bremen.html  Hamburg.html  Hessen.html  Mecklenburg-Vorpommern.html  Niedersachsen.html  Nordrhein-Westfalen.html  Rheinland-Pfalz.html  Saarland.html  Sachsen-Anhalt.html  Sachsen.html  Schleswig-Holstein.html  Thüringen.html
interim_csvs/: anzahl_betten.csv  forecast_results_all_states.csv  forecast_supply_demand_gap.csv  population_2015-2024.csv  population_forecast.csv  teilstationaere_fallzahl.csv  vollstationaere_fallzahl.csv
output/: beds_density_animation.html  index.html  style.css
sample-input/: 260100023-773287000-2024-xml copy.xml
src/: __main__.py  databasecontroller.py  density_analysis.py  heatmap_analysis.py  hospitalxml.py  linechart_analysis.py  main.py  population.py  population_forecast.py  report.py  supply_demand_gap_forecast.py
src/analysis/: density_analysis.py  heatmap_analysis.py  linechart_analysis.py  population_forecast.py  supply_demand_gap_forecast.py
tests/: test_ingestion.py
tests/sample/: one-location-hospital.xml
